* Updated my photo. Circle avatar like basecamp.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<!doctype html>
-<!--paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/-->
-<!--[if lt IE 7 ]> <html class="no-js ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]>    <html class="no-js ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]>    <html class="no-js ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js desktop" lang="en"> <!--<![endif]-->
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="no-js ie6 oldie ie" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="no-js ie7 oldie ie" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="no-js ie8 oldie ie" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8"> 
 
@@ -74,7 +74,7 @@
 	<div id="page_1" class="page_container">
 		<div class="page_contents center padding_top_100" style="width: 735px;">
 			<p id="init_msg" class="align-c">
-				<img src="images/me.jpg" style="vertical-align:bottom;" alt="rafael's head" id="rafaels_head" />
+				<span id="rafaels_head">&nbsp;</span>
 				Hi, I'm <span class="green_highlight">Rafael Gandionco.</span> A web developer from the Philippines.
 				<br /><br />		
 				I've been doing <span class="green_highlight">web development</span> stuff professionally for more than <script>document.write((new Date()).getFullYear()-2009)</script> years now.
