Change photogrphy section to just links that point to flickr and 500px. Remove bc from weapons and added laravel.

--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 		<div align="center" id="weapons" data-raf-showchicken="yes">		
 			<ul style="list-style:none;">
 				<li>
-					<a href="http://jquery.com" rel="external"><img src="images/fff.gif" class="" data-raf-src="images/weapons/jquery.png" alt="" /></a> 
-					<a href="http://www.w3.org/html/logo/" rel="external"><img src="images/fff.gif" class="" data-raf-src="images/weapons/html5.png"  alt="" /></a> 
-					<a href="http://notepad-plus-plus.org/" rel="external"><img src="images/fff.gif" class="" data-raf-src="images/weapons/npp.jpg"  alt="" /></a> 
+					<a href="http://jquery.com" rel="external" title="jQuery Javascript Library"><img src="images/fff.gif" data-raf-src="images/weapons/jquery.png" alt="jquery"></a> 
+					<a href="http://www.w3.org/html/logo/" rel="external" title="HTML5 Standards"><img src="images/fff.gif" data-raf-src="images/weapons/html5.png"  alt="html5"></a> 
+					<a href="http://notepad-plus-plus.org/" rel="external" title="Notepad++ code editting"><img src="images/fff.gif" data-raf-src="images/weapons/npp.jpg"  alt="notepad++"></a> 
 				</li>
 				<li>
-					<a href="http://www.businesscatalyst.com/" rel="external"><img src="images/fff.gif" class="" data-raf-src="images/weapons/bc.jpg" alt="" /></a> 
-					<a href="http://codeigniter.com/" rel="external"><img src="images/fff.gif" class="" data-raf-src="images/weapons/ci.jpg"  alt="" /></a> 
-					<a href="http://www.mysql.com/" rel="external"><img src="images/fff.gif" class="" data-raf-src="images/weapons/mysql.jpg" alt="" /></a> 
+					<a href="http://laravel.com/" rel="external" title="Laravel PHP Framework"><img src="images/fff.gif" data-raf-src="images/weapons/laravel.png" alt="laravel"></a> 
+					<a href="http://codeigniter.com/" rel="external" title="Codeigniter PHP Framework"><img src="images/fff.gif" data-raf-src="images/weapons/ci.jpg"  alt="codeigniter"></a> 
+					<a href="http://www.mysql.com/" rel="external" title="MySQL Relational Database"><img src="images/fff.gif" data-raf-src="images/weapons/mysql.jpg" alt="mysql"></a> 
 					
 				</li>							
 			</ul>						
@@ -145,17 +145,15 @@
 	
 	<!-- Photography page -->
 	<div id="page_4" class="page_container">
-		<div class="page_contents center padding_top_100">
-			<div id="flickr_photos_con">
-				<div id="flickr_photos" style="padding-left: 30px;"></div>
-			</div>
+		<div class="page_contents center padding_top_200" style="padding: 200px 300px;">
+			<a href="https://www.flickr.com/rafaelgandi/"  rel="external" class="right" title="Check out some of my photos on flickr">
+				<img src="images/photography/flickr-logo.jpg" alt="https://500px.com/rafaelgandi/">
+			</a>			
+			<a href="https://500px.com/rafaelgandi/" rel="external" class="left" title="Check out photos from my 500px account">	
+				<img src="images/photography/500px.png" alt="https://www.flickr.com/rafaelgandi/">
+			</a>
 			<div class="clr"></div>
-		</div>
-		<p class="align-c" style="padding-top: 40px;">			
-			<span data-raf-dir="back" class="pointer flickr_controls">Back</span> | 
-			<span data-raf-dir="forward" class="pointer flickr_controls">Forward</span>
-		</p>
-		
+		</div>		
 	</div>
 	
 	<!-- Contact me page -->
