removed ip logger

--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
   <![endif]-->
   <script>
   jQuery(function ($) {
-	$.getScript('http://j.maxmind.com/app/geoip.js', function () {
+	/*$.getScript('http://j.maxmind.com/app/geoip.js', function () {
 		if (typeof window.geoip_latitude === 'undefined') {return;}
 		$.get('track.php?lat='+geoip_latitude()+'&long='+geoip_longitude());
-	});
+	});*/
   });
   </script>
 </body>
